--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <link rel="shortcut icon" href="S.png" type="image/png">    
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="up">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="#home" style="color:white;" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#about" style="color:white;" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#skills" style="color:white;" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#home" style="color:white;" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#edu" style="color:white;" class="nav-link">Education</a></li>
             </ul>
         </header>
     </div>
+
+    
 
     <div class="title" id="home" style="margin-top:10%;margin-bottom: 22%;">
         <div class="px-4 pt-5 my-5 text-center title-text">
@@ -153,7 +155,7 @@
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" >
             <p class="col-md-4 mb-0"style="color: white;" >© Srikar Veluvali <br> Email: srikarv100@gmail.com <br> Phone: +91 6281397352</p>
     
-            <a href="/"
+            <a href="#up"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-arrow-up"
                     viewBox="0 0 16 16">
