--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="title" id="home" style="margin-top:10%;margin-bottom: 22%;">
         <div class="px-4 pt-5 my-5 text-center title-text">
             <h1>Hello! I'm <span style="color:blueviolet;">Srikar Veluvali</span></h1>
-            <h2>Student at Keshav Memorial Institute of Technology (II year)</h2>
+            <h2>Student at Keshav Memorial Institute of Technology (III year)</h2>
         </div>
     </div>
 
@@ -41,8 +41,6 @@
             <h3 class="profage">18 y/o</h3>
             <p style="text-align: center;">
                 Hello! My name is Srikar. I am currently studying in Keshav Memorial Institute of Technology.
-                <br>
-                This is my first attempt on creating a portfolio website.
                 <br>
                 I like Coding and playing a lot of Videogames.
                 <br>
